# noctune

./: .gitignore  ARCHITECTURE.md  DECISIONS.md  DESIGN.md  README.md
backend/: .gitignore  config.example.yaml  debug_start.py  pyproject.toml  run_dev.py
backend/src/noctune/: __init__.py  api.py  cli.py  config.py  config_loader.py  daemon.py  extract.py  fingerprint.py  genres.py  llm_router.py  main.py  navidrome.py  normalize.py  path_probe.py  pipeline.py  reconcile.py  store.py  tag_writer.py  transfer.py  watcher.py
backend/src/noctune.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
backend/src/noctune/models/: __init__.py  config.py  pipeline.py  track.py
backend/tests/: conftest.py  test_api.py  test_cli.py  test_config_loader.py  test_daemon.py  test_extract.py  test_fingerprint.py  test_genres.py  test_integration.py  test_models.py  test_navidrome.py  test_normalize.py  test_pipeline.py  test_reconcile.py  test_store.py  test_tag_writer.py  test_transfer.py  test_watcher.py
docs/plans/: 2026-05-15-implementation-plan.md
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: app.css
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/duplicates/: +page.svelte
frontend/src/routes/normalize/: +page.svelte
frontend/src/routes/review/: +page.svelte
frontend/src/routes/settings/: +page.svelte
